finally fixed the overflow-x, so now there is no white space on the right, the navbar works and the js numbers also work

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,6 @@ body,
 html {
     width: 100%;
 	height: 100%;
-	overflow-x: hidden;
 }
 
 body, p {
@@ -1591,9 +1590,6 @@ input[type='checkbox'] {
 	padding-top: 6.875rem;
 	padding-bottom: 5.25rem;
 	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/backgroundlight.jpg') center center no-repeat;
-	background-size: cover;
-	height: 100%;
-
 }
 
 .counter h2, p {
@@ -1603,8 +1599,7 @@ input[type='checkbox'] {
 
 .counter .image-container {
 	margin-bottom: 8rem;
-	padding-top: 3rem;
-	padding-bottom: 2.125rem;
+
 	
 }
 
@@ -1896,15 +1891,27 @@ a:hover.back-to-top {
 	margin-top: 1.75rem;
 }
 
-
 /*****************************/
 /*     21. Media Queries     */
 /*****************************/	
+
+@media (max-width: 360px) {
+	
+	/* General Styles */
+	
+	body, html {
+		width: 100%;
+		height: 100%;
+		overflow-x: hidden;
+	}
+}
+
 /* Min-width width 768px */
 
 @media (min-width: 768px) {
 	
 	/* General Styles */
+	
 	.p-heading {
 		width: 85%;
 		margin-right: auto;
